--- a/TodoApp.Web.BlazorServer/wwwroot/css/site.css
+++ b/TodoApp.Web.BlazorServer/wwwroot/css/site.css
@@ -1,3 +1,13 @@
+
+.strike {
+    text-decoration: line-through;
+}
+
+.faded {
+    opacity: .4;
+}
+
+
 @import url('open-iconic/font/css/open-iconic-bootstrap.min.css');
 
 html, body {
