--- a/TodoApp.Web.Razor/Pages/Index.cshtml
+++ b/TodoApp.Web.Razor/Pages/Index.cshtml
@@ -8,7 +8,7 @@
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
                 <input asp-for="NewTodo.Title"
-                       autofocus="true"
+                       autofocus
                        style="margin-right: 10px;"
                        asp-asp-page-handler="CreateNewTodo"
                        class="form-control"
