--- a/TodoApp.Web.BlazorServer/Pages/Index.razor
+++ b/TodoApp.Web.BlazorServer/Pages/Index.razor
@@ -18,7 +18,7 @@
 <div class="container">
     <main role="main" class="pb-3">
         <div class="list-group mx-0">
-            @foreach (var todo in Todos.OrderBy(x => x.IsCompleted).ThenBy(x => x.Id))
+            @foreach (var todo in Todos!.OrderBy(x => x.IsCompleted).ThenBy(x => x.Id))
             {
                 <label class="list-group-item d-flex gap-2">
                     @if (todo.IsCompleted)
